# project_template

./: cookiecutter.json  dev-core.code-profile  logger_temp.py  pyproject.toml
.lh/{{cookiecutter.project_name}}/: pyproject.toml.json
cookiecutter_project_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hooks/: post_gen_project.py
unhooks/: post_gen_project.py
{{cookiecutter.name}}/: Dockerfile  LICENSE  README.md  pyproject.toml
{{cookiecutter.name}}/configs/: README.md  example.yaml
{{cookiecutter.name}}/src/{{cookiecutter.package_name}}/: __main__.py  settings.py
{{cookiecutter.name}}/src/{{cookiecutter.package_name}}/core/: metrics.py
{{cookiecutter.name}}/src/{{cookiecutter.package_name}}/registeries/: loader.py
{{cookiecutter.name}}/src/{{cookiecutter.package_name}}/services/: __init__.py  alert.py  base.py  logger.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/: __main__.py  scripts.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/core/: models.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/io/: __init__.py  _base.py  configs.py  example.py  reader.py  writer.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/io/schemas/: __init__.py  example.py  schemas.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/io/splitters/: __init__.py  example.py  splitter.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/jobs/: __init__.py  _base.py  base.py  training.py  tuning.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/metrics/: __init__.py  base.py  example.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/models/: __init__.py  base.py  example.py  example_model.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/registries/: __init__.py  _base.py  base.py  example.py  loader.py  register.py  savers.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/searchers/: __init__.py  _base.py  example.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/services/: __init__.py  alert.py  logger.py  mlflow_services.py
{{cookiecutter.name}}/src/{{cookiecutter.package}}/signers/: __init__.py  _base.py  example.py
{{cookiecutter.project_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/core/: __init__.py  metrics.py  models.py  schemas.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/io/: __init__.py  configs.py  csv.py  datasets.py  reader.py  registeries.py  services.py  writter.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/jobs/: __init__.py  base.py  evaluations.py  explanations.py  inference.py  promotion.py  training.py  tuning.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/registeries/: registries.py  saver.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/services/: alert.py  mlflow.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  searchers.py  signers.py  splitters.py
{{cookiecutter.project_name}}/tasks/: __init__.py  base_git_commands.py  setup_repo.py
