[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = {text = "{{ cookiecutter.open_source_license }}"}
keywords = [{% for keyword in cookiecutter.keywords.split(',') %}"{{ keyword.strip() }}", {% endfor %}]
dependencies = [
    "loguru>=0.7.2",
    "matplotlib>=3.9.0",
    "mlflow>=2.14.3",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pandera>=0.20.1",
    "plotly>=5.22.0",
    "plyer>=2.1.0",
    "psutil>=6.0.0",
    "pyarrow>=15.0.2",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "pynvml>=11.5.0",
    "setuptools>=71.1.0",
    "gtasks @ git+https://github.com/Boniface316/tasks.git"
]

[project.urls]
repository = "{{ cookiecutter.repository_url }}"
documentation = "{{ cookiecutter.documentation_url }}"

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.scripts:main"

[project.optional-dependencies]
checks = [
    "bandit>=1.7.9",
    "coverage>=7.5.4",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pandera[mypy]>=0.20.1",
    "ruff>=0.5.0",
    "pytest-mock>=3.14.0",
]
commits = [
    "commitizen>=3.27.0",
    "pre-commit>=3.7.1",
]
dev = [
    "invoke>=2.2.0",
]
docs = [
    "pdoc>=14.5.1",
]
notebooks = [
    "ipykernel>=6.29.4",
    "nbformat>=5.10.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
changelog_start_rev = "v1.0.0"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "{{ cookiecutter.python_version }}"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pandera.mypy", "pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target_version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]
